--- a/css/critical.css
+++ b/css/critical.css
@@ -212,7 +212,7 @@
     --fs-body-text: 1.2rem;
     --fs-text-heading: clamp(1.5rem, 2vw, 1.75rem);
     --fs-topper-heading: clamp(1rem, 1.5vw, 1.2rem);
-    --fs-sub-heading: clamp(2.5rem, 4vw, 3.5rem);
+    --fs-sub-heading: clamp(2.75rem, 4vw, 3.5rem);
     --fs-heading: clamp(3.5rem, 6vw, 5rem);
     --fs-hero-heading: clamp(3.25rem, 5.5vw, 5rem);
     --fs-hero-text: clamp(1.25rem, 2vw, 1.5rem);
@@ -372,7 +372,7 @@
 @layer base {
   html,
   body {
-    min-height: 100%;
+    min-height: 100dvh;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
   }
